@@ -16,6 +16,7 @@
 * Updated README with notes about configuration.
 * Added another feature description.
 * Noted a couple bugs.
+* Changed the shell prompt.
 
 2012-04-22
 
